--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
 
-URI_MONGO=mongodb://localhost:27017/cafeDBNew
+URI_MONGO=mongodb://localhost:27017/empresasDBNew
 
 SECRETORPRIVATEKEY=Est03sMyPub1cK3y1609
